--- a/index.html
+++ b/index.html
@@ -1,40 +1,69 @@
 <!DOCTYPE html>
-<html lang="PT-BR">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Previsao Do Tempo</title>
-</head>
-<body>
-    <div class="app-container">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <div class="input-group mb-3">
-            <input id="cidadeinput" class="form-control" type="text" placeholder="Digite o nome da cidade" aria-label="Nome da cidade" aria-describedby="button-addon2">
-            <button class="btn btn-outline-secondary" type="button"  id="buscarButton">Buscar</button>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  >
+
+  <link rel="stylesheet" href="style.css">
+
+  <title>Previsão do Tempo</title>
+</head>
+
+<body>
+  <div class="container min-vh-100 d-flex align-items-center justify-content-center">
+    <div class="row w-100 justify-content-center">
+      <div class="col-12 col-sm-10 col-md-6 col-lg-4">
+
+        <div class="app-container w-100">
+
+          <!-- Busca -->
+          <div class="input-group mb-3">
+            <input
+              id="cityInput"
+              class="form-control"
+              type="text"
+              placeholder="Digite o nome da cidade"
+              aria-label="Nome da cidade"
+            >
+            <button
+              class="btn btn-outline-secondary search-button"
+              type="button"
+              id="searchButton"
+            >
+              Buscar
+            </button>
+          </div>
+
+          <!-- Card do clima -->
+          <div class="card text-center mt-4 card-clima">
+            <div class="card-body">
+
+              <h5 class="card-title"></h5>
+
+              <img
+                src=""
+                alt="Ícone do clima"
+                class="weather-icon mx-auto d-block"
+              >
+
+              <p class="temp"></p>
+              <p class="humidity"></p>
+              <p class="message"></p>
+
+            </div>
+          </div>
+
         </div>
 
-        <div class="card text-center mt-4 card-clima">
-  <div class="card-body">
-    <h5 class="card-title">Cidade</h5>
-
-    <img
-      src=""
-      alt="Ícone do clima"
-      class="clima-icon"
-    >
-
-    <p class="temp" ></p>
-    <p class="umidade" ></p>
-    <p class="mensagem" >
-      
-    </p>
+      </div>
+    </div>
   </div>
-</div>
- 
-</div>
 
+  <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
